--- a/wp/.htaccess
+++ b/wp/.htaccess
@@ -3,6 +3,8 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
+#RewriteCond %{HTTPS} off
+#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
